--- a/client/config.yaml
+++ b/client/config.yaml
@@ -2,6 +2,7 @@ encryption:
   enabled: false
 sync:
   graphs:
-    - /home/schrist/OneDrive/Logseq/Personal
-    - /home/schrist/OneDrive/Logseq/Work
+    - D:\10_Notizen\Work
   interval: 10
+server:
+  host: http://localhost:3000
